[package]
name = "cyber-gpu-test"
version = "0.1.0"
edition = "2024"
readme = "README.md"
repository = "https://github.com/kostDev/cyber-gpu-test"
description = "small project for test gpu on anbernic devices"
authors = ["Kostya Potapenko"]

[dependencies]
sdl2 = { version = "0.37.0", features = ["ttf"] }
rand = "0.9.1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = "debuginfo"
embed-bitcode = true